@@ -38,6 +38,9 @@ ${EZBIN}/ezmlm-make -+ln -C${EZBIN}/lang/en_US "$DIR" || \
     echo 'TargetLocal: <#a#>'
     echo 'Confirm: <#R#>'
     echo 'Cookie: <#c#>'
+    echo 'Hash: <#C#>'
+    echo 'Time: <#T#>'
+    echo 'Action: <#X#>'
     echo 'MsgNum: <#n#>'
     echo 'ConfirmLocal: <#r#>'
     echo 'target: <#t#>'
