@@ -18,6 +18,10 @@ Some ezmlmrc are not updated and may not work right.  If you fix them,
 please send them to ezmlm@list.cr.yp.to for inclusion in the next
 release.
 
+- Added <#C#>, <#T#>, and <#X#> substitutions for (un)subscribe
+  confirmation emails, replaced with the hash code, time stamp, and
+  action respectively.
+
 - Fixed behavior of ezmlm-manage -Q flag to match man page.
 
 ezmlm-idx-7.1.1, 2010-11-18
